--- a/resources/views/publishers/update_game.edge
+++ b/resources/views/publishers/update_game.edge
@@ -6,7 +6,7 @@ Update Game
 
 @section('content')
 
-<h1>Update {{game.title}}</h1>
+<h1>Update {{game.title}} | MiST</h1>
 
 <form method="POST">
   {{csrfField()}}
