Added User controller and migrated new columns to users table

--- a/resources/views/publishers/games.edge
+++ b/resources/views/publishers/games.edge
@@ -14,11 +14,11 @@
 
   @each(game in games)
   <tr>
-    <th scope="col" class="table-dark">Game ID</th>
+    <th scope="col" class="table-dark">ID</th>
     <th scope="col" class="table-dark">Game Title</th>
     <th scope="col" class="table-dark">Developer</th>
     <th scope="col" class="table-dark">Publisher</th>
-    <th scope="col" class="table-dark">Release Date</th>
+    <th scope="col" class="table-dark">Released</th>
     <th scope="col" class="table-dark" style="width:80px;">Verified</th>
     <th scope="col" class="table-dark" style="width:80px;">Actions</th>
   </tr>
