--- a/resources/views/publishers/profile.edge
+++ b/resources/views/publishers/profile.edge
@@ -5,7 +5,7 @@
 @endsection
 
 @section('content')
-<h1>Publisher Profile</h1>
+<h1 class="m-3">Publisher Profile</h1>
 <table class='table table-borderless table-responsive-xl m-3'>
   <tbody>
     <tr>
