Completed user registration with validation. Tested and working

--- a/resources/views/publishers/add_game.edge
+++ b/resources/views/publishers/add_game.edge
@@ -53,7 +53,7 @@ Add Game | MiST
     <label class="form-label">Game Tags:</label>
     <select class="tags form-control {{hasErrorFor('tags') ? 'is-invalid': ''}}" name="tags[]" multiple="multiple">
       @each(tag in tags)
-        <option value="{{tag.id}}" {{old('tags').includes(tag.id) ? 'selected' : ''}}>{{tag.tag_name}}</option>
+        <option value="{{tag.id}}" {{old('tags').includes(tag.id.toString()) ? 'selected' : ''}}>{{tag.tag_name}}</option>
       @endeach
     </select>
       <small class="form-text text-muted">Select the tags and categories related to your game</small>
