--- a/resources/views/base.edge
+++ b/resources/views/base.edge
@@ -17,6 +17,9 @@
     @if(flashMessage('notification'))
       <div class="alert alert-success">{{ flashMessage('notification') }}</div>
     @endif
+    @if(flashMessage('warning'))
+      <div class="alert alert-danger">{{ flashMessage('warning') }}</div>
+    @endif
     <div class="container">
         @section("content")
         @endsection
