Added Order and transaction models, migrations and tables

--- a/resources/views/publishers/profile.edge
+++ b/resources/views/publishers/profile.edge
@@ -29,7 +29,7 @@
       <td>{{publisher.created_at}}</td>
     </tr>
     <tr>
-      <th scope="row">Last Updated:</td>
+      <th scope="row">Last Login:</td>
       <td>{{publisher.updated_at}}</td>
     </tr>
     <tr>
