--- a/resources/views/publishers/games.edge
+++ b/resources/views/publishers/games.edge
@@ -49,7 +49,7 @@
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
     </td>
-    <td colspan="2"><img src="{{game.image}}" style="height:150px"/></td>
+    <td colspan="2"><img src="{{game.image}}" style="height:172px;width:368px;object-fit:cover;"/></td>
     <td>
       @each(tag in game.tags)
       {{tag.tag_name}},
