--- a/resources/views/publishers/update_game.edge
+++ b/resources/views/publishers/update_game.edge
@@ -65,7 +65,7 @@ Update Game | MiST
     <label class="form-label">Game Display Image:</label>
     <a href='#' class="btn btn-primary mb-3 upload_widget">Upload Image</a><br/>
     <input type="hidden" name="image" class="image_url form-control {{hasErrorFor('image') ? 'is-invalid': ''}}" value="{{game.image}}"/>
-    <img src="{{game.image}}" class="display_image" style="height:300px;"/>
+    <img src="{{game.image}}" class="display_image" style="height:215px;width:460px;object-fit:cover;"/>
       @if(hasErrorFor('image'))
       <div class='invalid-feedback'>{{getErrorFor('image')}}</div>
       @endif
@@ -100,8 +100,6 @@ Update Game | MiST
       uploadSignature:generateSignature
     }, (error,result)=>{
       if (!error && result && result.event === 'success') {
-        console.log("Upload success!");
-        console.log(result.info);
         document.querySelector('.image_url').value = result.info.url;
         document.querySelector('.display_image').src = result.info.url
         document.querySelector('.display_image').style.display = 'block';
